--- a/module4-solution/src/menuapp/templates/category.template.html
+++ b/module4-solution/src/menuapp/templates/category.template.html
@@ -1,6 +1,6 @@
 <a ui-sref="home">Home</a> &lt; <span>Categories</span>
 
 <h3>List of categories</h3>
-<cat-list categories="list.categories"></cat-list>
+<cat-list items="list.items"></cat-list>
 
 <ui-view></ui-view>
