--- a/module4-solution/src/menuapp/templates/catList.template.html
+++ b/module4-solution/src/menuapp/templates/catList.template.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="category in $ctrl.items" ui-sref="">
+  <li ng-repeat="category in $ctrl.items" >
     {{ category.short_name }}
   </li>
 </ul>
