--- a/module4-solution/src/templates/catList.template.html
+++ b/module4-solution/src/templates/catList.template.html
@@ -1,5 +1,5 @@
-<ul  style="width: 40%;">
-  <li  ng-repeat="item in $ctrl.items" ui-sref="categories.menuItems({catId: item.short_name}">
+<ul>
+  <li  ng-repeat="item in $ctrl.items" ui-sref="categories.menuItems({catId: item.short_name})">
     <h4>({{ item.short_name }}) {{ item.name }} </h4>
     <p>
       {{ item.special_instructions }}
