--- a/module4-solution/src/templates/itemsList.template.html
+++ b/module4-solution/src/templates/itemsList.template.html
@@ -1,8 +1,6 @@
-<ul class="list-group" style="width: 40%;">
-  <li class="list-group-item selection" ng-repeat="menuitem in $ctrl.items" >
-    <h4>{{menuitem.name}}
-        <span class="badge pull-left">{{menuitem.short_name}} </span>
-      </h4><br>
+<ul>
+  <li ng-repeat="menuitem in $ctrl.items" >
+    <h4>({{menuitem.short_name}}) {{menuitem.name}} <span style="color: red">{{menuitem.price_large}}$</span></h4>
     <p>
       {{menuitem.description}}
     </p>
