--- a/module4-solution/src/templates/categories.template.html
+++ b/module4-solution/src/templates/categories.template.html
@@ -1,6 +1,11 @@
 <a ui-sref="home">Home</a> &lt; <span>Categories</span>
 
-<h3>List of Menu Categories</h3>
-<cat-list items="list.items"></cat-list>
-
-<ui-view></ui-view>
+<div class="panel">
+  <div class="cat-items">
+    <h3>List of Menu Categories</h3>
+    <cat-list items="list.items"></cat-list>
+  </div>
+  <div class="menu-items">
+    <ui-view></ui-view>
+  </div>
+</div>
