--- a/module4-solution/src/templates/categories.template.html
+++ b/module4-solution/src/templates/categories.template.html
@@ -2,7 +2,7 @@
 
 <div class="panel">
   <div class="cat-items">
-    <h3>List of Menu Categories</h3>
+    <h3>Menu Categories</h3>
     <cat-list items="list.items"></cat-list>
   </div>
   <div class="menu-items">
